--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karla">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
+h1, h2, h3 {font-family: "Montserrat", sans-serif}
 body {font-family: "Montserrat", sans-serif}
+p {font-family: "Karla", sans-serif}
 .mySlides {display: none}
 </style>
 </head>
@@ -18,18 +21,18 @@ body {font-family: "Montserrat", sans-serif}
 <div class="w3-top">
   <div class="w3-bar w3-black w3-card">
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">HOME</a>
-    <a href="#band" class="w3-bar-item w3-button w3-padding-large w3-hide-small">RESUME</a>
-    <a href="#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small">DESIGNS</a>
-    <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACT</a>
+    <a href="index.html" class="w3-bar-item w3-button w3-padding-large">HOME</a>
+    <a href="resume.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">RESUME</a>
+    <a href="designs.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">DESIGNS</a>
+    <a href="contact.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACT</a>
   </div>
 </div>
 
 <!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
 <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
-  <a href="#band" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">RESUME</a>
-  <a href="#tour" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">DESIGNS</a>
-  <a href="#contact" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">CONTACT</a>
+  <a href="resume.html" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">RESUME</a>
+  <a href="designs.html" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">DESIGNS</a>
+  <a href="contact.html" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">CONTACT</a>
 </div>
 
 <!-- Page content -->
@@ -55,7 +58,7 @@ body {font-family: "Montserrat", sans-serif}
     </div>
   </div>
 
-  <!-- The Band Section -->
+  <!-- The Betsy Section -->
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
     <h2 class="w3-wide">BETSY TUGGLE</h2>
     <p class="w3-opacity"><i>Aspiring Animator</i></p>
@@ -143,7 +146,7 @@ body {font-family: "Montserrat", sans-serif}
   </div> -->
 
   <!-- The Contact Section -->
-  <div class="w3-container w3-content w3-padding-64" style="max-width:800px" id="contact">
+  <!-- <div class="w3-container w3-content w3-padding-64" style="max-width:800px" id="contact">
     <h2 class="w3-wide w3-center">CONTACT</h2>
     <p class="w3-opacity w3-center"><i>Fan? Drop a note!</i></p>
     <div class="w3-row w3-padding-32">
@@ -167,7 +170,7 @@ body {font-family: "Montserrat", sans-serif}
         </form>
       </div>
     </div>
-  </div>
+  </div> -->
   
 <!-- End Page Content -->
 </div>
@@ -177,12 +180,12 @@ body {font-family: "Montserrat", sans-serif}
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
-  <i class="fa fa-facebook-official w3-hover-opacity"></i>
-  <i class="fa fa-instagram w3-hover-opacity"></i>
-  <i class="fa fa-snapchat w3-hover-opacity"></i>
+  <!-- <i class="fa fa-facebook-official w3-hover-opacity"></i> -->
+  <a href = "https://www.instagram.com/sockb_/" title = "Visit my art account!" target = "_blank"><i class="fa fa-instagram w3-hover-opacity"></i></a>
+  <!-- <i class="fa fa-snapchat w3-hover-opacity"></i>
   <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-  <i class="fa fa-twitter w3-hover-opacity"></i>
-  <i class="fa fa-linkedin w3-hover-opacity"></i>
+  <i class="fa fa-twitter w3-hover-opacity"></i> -->
+  <a href = "https://www.linkedin.com/in/betsytuggle/" title = "Visit my LinkedIn!" target = "_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
 </footer>
 
 <script>
