--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ p {font-family: "Karla", sans-serif}
 
   <!-- Automatic Slideshow Images -->
   <div class="mySlides w3-display-container w3-center">
-    <img src="/images/samDND.jpg" alt="Half-Orc" style="width:60%">
+    <img src="images/samDND.jpg" alt="Half-Orc" style="width:60%">
     <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
       <h3>Half-Orc Character Design</h3>
     </div>
