--- a/designs.html
+++ b/designs.html
@@ -41,23 +41,23 @@ p {font-family: "Karla", sans-serif}
   <!-- First Photo Grid-->
   <div class="w3-row-padding w3-padding-16 w3-center" id="food">
     <div class="w3-quarter">
-      <img src="/images/samDND.jpg" alt="Half-Orc" style="width:100%">
+      <img src="images/samDND.jpg" alt="Half-Orc" style="width:100%">
       <h3>Half-Orc DND Character Commission</h3>
       <!-- <p>Just some random text, lorem ipsum text praesent tincidunt ipsum lipsum.</p> -->
     </div>
     <div class="w3-quarter">
-      <img src="/images/belleDND.jpg" alt="Tiefling" style="width:100%">
+      <img src="images/belleDND.jpg" alt="Tiefling" style="width:100%">
       <h3>Tiefling DND Character Commission</h3>
       <!-- <p>Once again, some random text to lorem lorem lorem lorem ipsum text praesent tincidunt ipsum lipsum.</p> -->
     </div>
     <div class="w3-quarter">
-      <img src="/images/parynDND.jpg" alt="Wood Elf" style="width:100%">
+      <img src="images/parynDND.jpg" alt="Wood Elf" style="width:100%">
       <h3>Wood Elf Ranger DND Character Commission</h3>
       <!-- <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p> -->
       <!-- <p>What else?</p> -->
     </div>
     <div class="w3-quarter">
-      <img src="/images/splashDND.jpg" alt="Water Genasi" style="width:100%">
+      <img src="images/splashDND.jpg" alt="Water Genasi" style="width:100%">
       <h3>Water Genasi Barbarian DND Character Commission</h3>
       <!-- <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p> -->
     </div>
@@ -92,7 +92,7 @@ p {font-family: "Karla", sans-serif}
   <!-- About Section -->
   <div class="w3-container w3-padding-32 w3-center">  
     <h3>About Me, The Drawer of The Stuff on This Page</h3><br>
-    <img src="/images/betsyTuggle_profile.jpg" alt="Profile Picture" class="w3-image" style="display:block;margin:auto" width="800" height="533">
+    <img src="images/betsyTuggle_profile.jpg" alt="Profile Picture" class="w3-image" style="display:block;margin:auto" width="800" height="533">
     <div class="w3-padding-32">
       <h4><b>I am very passionate about what I do!</b></h4>
       <p>I have always had an incredible passion and love for animation.
