--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@ p {font-family: "Karla", sans-serif}
     </div>
   </div>
   <div class="mySlides w3-display-container w3-center">
-    <img src="/images/belleDND.jpg" alt="Tiefling" style="width:60%">
+    <img src="images/belleDND.jpg" alt="Tiefling" style="width:60%">
     <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
       <h3>Tiefling Character Design</h3> 
     </div>
   </div>
   <div class="mySlides w3-display-container w3-center">
-    <img src="/images/parynDND.jpg" alt="Wood Elf" style="width:60%">
+    <img src="images/parynDND.jpg" alt="Wood Elf" style="width:60%">
     <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
       <h3>Wood Elf Ranger Character Design</h3>
     </div>
